# CHRplunk

./: .gitignore  INSTALL.md  NES_IDE_SPECIFICATION.md  README.md  chrplunk-app.py  create_sample_chr.py  create_sample_rom.py  meson.build  meson_options.txt  run.sh
chrplunk/: __init__.py  application.py  bank_selector.py  build_system.py  chr_format.py  code_editor.py  ide_window.py  nes_rom.py  palette_editor.py  project.py  project_manager.py  tile_viewer.py  window.py
data/: com.github.chrplunk.desktop.in  com.github.chrplunk.gschema.xml  com.github.chrplunk.metainfo.xml.in  meson.build
data/language-specs/: 6502asm.lang
